--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
 
     <!-- Global CSS (CSS rules you want applied to all pages) -->
@@ -34,7 +34,7 @@
     <!-- Page-specific CSS -->
     <link rel="stylesheet" href="./landing.css" />
 
-    <title>Login to the ChatterGrape!</title>
+    <title>Login to the ChatterGrape</title>
 
     <!-- Run BEFORE page is finished loading (before window.onload - don't add the `defer` attribute): -->
     <script src="./auth.js"></script>
@@ -44,7 +44,7 @@
   </head>
   <body>
     <header>
-      <h1>Welcome to the <code class="m-1">ChatterGrape 🍇</code></h1>
+      <h1>Welcome to the ChatterGrape 🍇</h1>
     </header>
 
     <main class="container">
