--- a/profile/profile.html
+++ b/profile/profile.html
@@ -1,77 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!--Bootstrap-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
 
     <!--Google Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
 
     <!--Specific Profile CSS stylesheet-->
-    <link rel="stylesheet" href="/profile/profile.css"/>
-    
+    <link rel="stylesheet" href="/profile/profile.css" />
+
     <!-- Global CSS (CSS rules you want applied to all pages) -->
-    <link rel="stylesheet" href="/global.css">
+    <link rel="stylesheet" href="/global.css" />
 
     <title>Profile Page</title>
 
     <!-- Run BEFORE page is finished loading (before window.onload): -->
     <script src="../auth.js"></script>
     <script>
-        if (isLoggedIn() === false) window.location.replace("/posts");
+      if (isLoggedIn() === false) window.location.replace("/posts");
     </script>
-</head>
-<body>
-        <!-- Navbar -->
-        <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/profile/profile.html">Profile</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-        <!-- End of navbar -->
+  </head>
+  <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/profile/profile.html">Profile</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- End of navbar -->
 
     <header>
-        <h1>Create New Post</h1>
+      <h1>Create New Post</h1>
     </header>
-    
-    <main>
-        <form id="post-form" class="container text-left row">
-            <div class="blog">
-                <textarea type="text" class="title" placeholder=" Start writing your Title. Max Length: 50 characters" maxlength="50"></textarea>
-                <textarea type="text" class="article" placeholder="Start writing your Post. Max Length: 200 characters" maxlength="200"></textarea>
-            </div>
-            <div class="blog-options">
-                <button type="submit" class="btn dark publish-btn" id="publishBtn">Publish</button>
-                <button id="logoutBtn" class="btn publish-btn" onclick="logoutAndRedirect()">Logout</button>
-            </div>
-        </form>
 
-        <a id="go-to-posts-link" href="/posts/index.html">Go to Posts</a>
+    <main>
+      <form id="post-form" class="container text-left row">
+        <div class="profile-picture">
+          <label for="profile-picture-input">Profile Picture:</label>
+          <input type="file" id="profile-picture-input" accept="image/*" />
+        </div>
+        <div class="blog">
+          <textarea
+            type="text"
+            class="article"
+            placeholder="Start writing your Post. Max Length: 200 characters"
+            maxlength="200"
+          ></textarea>
+        </div>
+        <div class="blog-options">
+          <button type="submit" class="btn dark publish-btn" id="publishBtn">
+            Publish
+          </button>
+          <button
+            id="logoutBtn"
+            class="btn publish-btn"
+            onclick="logoutAndRedirect()"
+          >
+            Logout
+          </button>
+        </div>
+      </form>
+it 
+      <a id="go-to-posts-link" href="/posts/index.html">Go to Posts</a>
     </main>
 
     <footer class="fixed-bottom text-center p-2">ChatterGrape 2023 ©</footer>
 
     <script src="/profile/profile.js"></script>
-</body>
+  </body>
 </html>
